syntax = "proto3";

import "pkg/protocol/core/base/base.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

package pbct;

option go_package = "github.com/TencentBlueKing/bk-bscp/pkg/protocol/core/config-template;pbct";

// ConfigTemplate source resource reference: pkg/dal/table/config_template.go
message ConfigTemplate {
  uint32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "配置模板ID" }];
  ConfigTemplateSpec spec = 2;
  ConfigTemplateAttachment attachment = 3;
  pbbase.Revision revision = 4;
}

// ConfigTemplateSpec source resource reference: pkg/dal/table/config_template.go
message ConfigTemplateSpec {
  string name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "配置模版名称" }];
  string file_name = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "文件名" }];
}

// ConfigTemplateAttachment source resource reference: pkg/dal/table/config_template.go
message ConfigTemplateAttachment {
  uint32 biz_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "业务ID" }];
  uint32 template_id = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "关联的模板ID" }];
  repeated uint32 cc_template_process_ids = 3
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "关联cc服务模版下的模板进程ID" }];
  repeated uint32 cc_process_ids = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "关联cc中未通过服务模板创建的进程实例ID"
  }];
  string tenant_id = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "租户ID" }];
}

// BizTopoNode 业务拓扑节点信息
message BizTopoNode {
  uint32 bk_inst_id = 1;           // 实例ID
  string bk_inst_name = 2;         // 实例展示名
  string bk_obj_icon = 3;          // 模型图标
  string bk_obj_id = 4;            // 模型ID
  string bk_obj_name = 5;          // 模型展示名
  repeated BizTopoNode child = 6;  // 子节点（递归）
  uint32 default = 7;              // 业务类型 / 集群类型
  uint32 service_template_id = 8;  // 服务模板ID
  uint32 host_count = 9;           // 主机数量
  uint32 process_count = 10;       // 进程数量
}

// ServiceTemplate 服务模板信息
message ServiceTemplate {
  uint32 bk_biz_id = 1;            // 业务ID
  uint32 id = 2;                   // 服务模板ID
  string name = 3;                 // 服务模板名称
  uint32 service_category_id = 4;  // 服务分类ID
  string creator = 5;              // 创建者
  string modifier = 6;             // 最后修改人员
  string create_time = 7;          // 创建时间
  string last_time = 8;            // 更新时间
  string bk_supplier_account = 9;  // 开发商账号
  bool host_apply_enabled = 10;    // 是否启用主机属性自动应用
}

// ProcTemplate 进程模板数据
message ProcTemplate {
  uint32 id = 1;
  string bk_process_name = 2;
  uint32 bk_biz_id = 3;
  uint32 service_template_id = 4;
  map<string, PropertyField> property = 5;  // map 类型
  string creator = 6;
  string modifier = 7;
  string create_time = 8;
  string last_time = 9;
  string bk_supplier_account = 10;
}

// PropertyField 属性字段
message PropertyField {
  string value = 1;           // 任意值序列化为 JSON 字符串
  bool as_default_value = 2;  // 是否作为默认值
}

// TemplateSearchCond 配置模板搜索条件
message TemplateSearchCond {
  string template_name = 1;
  string file_name = 2;
  string reviser = 3;
}